[gd_scene load_steps=3 format=3 uid="uid://f4ie0ytcicf0"]

[ext_resource type="Script" path="res://addons/signal_lens/editor/signal_lens_editor_panel.gd" id="1_abwge"]
[ext_resource type="Texture2D" uid="uid://brdnqivcfnsun" path="res://addons/signal_lens/icons/icon_logo.png" id="6_wrl4d"]

[node name="Signal Lens" type="Control" node_paths=PackedStringArray("graph_edit", "node_path_line_edit", "refresh_button", "clear_button", "inactive_text", "pin_checkbox", "lock_checkbox", "emission_speed_slider", "emission_speed_icon")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abwge")
graph_edit = NodePath("EditorPanel/GraphEdit")
node_path_line_edit = NodePath("EditorPanel/MainButtonsContainer/HBoxContainer2/NodePathLineEdit")
refresh_button = NodePath("EditorPanel/MainButtonsContainer/HBoxContainer2/RefreshButton")
clear_button = NodePath("EditorPanel/MainButtonsContainer/HBoxContainer2/ClearButton")
inactive_text = NodePath("EditorPanel/InactiveTextContainer/InactiveText")
pin_checkbox = NodePath("EditorPanel/MainButtonsContainer/HBoxContainer2/PinCheckbox")
lock_checkbox = NodePath("EditorPanel/MainButtonsContainer/HBoxContainer2/LockCheckbox")
emission_speed_slider = NodePath("EditorPanel/MainButtonsContainer/HBoxContainer2/EmissionSpeedContainer/EmissionSpeedSlider")
emission_speed_icon = NodePath("EditorPanel/MainButtonsContainer/HBoxContainer2/EmissionSpeedContainer/EmissionSpeedIcon")

[node name="EditorPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GraphEdit" type="GraphEdit" parent="EditorPanel"]
layout_mode = 2
grid_pattern = 1
connection_lines_thickness = 3.0
zoom = 0.3
minimap_size = Vector2(120, 80)
show_zoom_label = true
show_grid_buttons = false

[node name="MainButtonsContainer" type="MarginContainer" parent="EditorPanel"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer2" type="HBoxContainer" parent="EditorPanel/MainButtonsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ClearButton" type="Button" parent="EditorPanel/MainButtonsContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "Clear Button
Clear the graph."
disabled = true

[node name="RefreshButton" type="Button" parent="EditorPanel/MainButtonsContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "Refresh Button
Redraw the graph."
disabled = true

[node name="NodePathLineEdit" type="LineEdit" parent="EditorPanel/MainButtonsContainer/HBoxContainer2"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
tooltip_text = "Node Path
Node path for the node that is currently selected in the remote scene."
text = "/root"
editable = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
select_all_on_focus = true

[node name="PinCheckbox" type="CheckButton" parent="EditorPanel/MainButtonsContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "Pin This Node
If toggled on, ignores any new selections made in the remote scene."
disabled = true

[node name="LockCheckbox" type="CheckButton" parent="EditorPanel/MainButtonsContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "Lock
If toggled on, keeps any received signal emissions drawn in the graph.
When toggled off, drawn signal emissions will fade out."
disabled = true

[node name="EmissionSpeedContainer" type="HBoxContainer" parent="EditorPanel/MainButtonsContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "Emission Speed
Controls the speed of the fade out of signal emissions.
Left means means quick, right means long."

[node name="EmissionSpeedIcon" type="Button" parent="EditorPanel/MainButtonsContainer/HBoxContainer2/EmissionSpeedContainer"]
layout_mode = 2
mouse_filter = 2
disabled = true
flat = true

[node name="EmissionSpeedSlider" type="HSlider" parent="EditorPanel/MainButtonsContainer/HBoxContainer2/EmissionSpeedContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = 0.3
max_value = 6.0
step = 0.1
value = 1.0
editable = false

[node name="InactiveTextContainer" type="PanelContainer" parent="EditorPanel"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="InactiveText" type="Label" parent="EditorPanel/InactiveTextContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Play project to start debugging"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RepoButtonContainer" type="MarginContainer" parent="EditorPanel"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15

[node name="RepoButton" type="Button" parent="EditorPanel/RepoButtonContainer"]
texture_filter = 4
custom_minimum_size = Vector2(145.04, 40)
layout_mode = 2
tooltip_text = "Click to access the plugin's repository on Github.
Submit issues, consult documentation and contribute!"
icon = ExtResource("6_wrl4d")
flat = true
icon_alignment = 1
vertical_icon_alignment = 2
expand_icon = true

[connection signal="node_deselected" from="EditorPanel/GraphEdit" to="." method="_on_graph_edit_node_deselected"]
[connection signal="node_selected" from="EditorPanel/GraphEdit" to="." method="_on_graph_edit_node_selected"]
[connection signal="pressed" from="EditorPanel/MainButtonsContainer/HBoxContainer2/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="EditorPanel/MainButtonsContainer/HBoxContainer2/RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="toggled" from="EditorPanel/MainButtonsContainer/HBoxContainer2/PinCheckbox" to="." method="_on_pin_checkbox_toggled"]
[connection signal="toggled" from="EditorPanel/MainButtonsContainer/HBoxContainer2/LockCheckbox" to="." method="_on_lock_checkbox_toggled"]
[connection signal="value_changed" from="EditorPanel/MainButtonsContainer/HBoxContainer2/EmissionSpeedContainer/EmissionSpeedSlider" to="." method="_on_emission_speed_slider_value_changed"]
[connection signal="pressed" from="EditorPanel/RepoButtonContainer/RepoButton" to="." method="_on_repo_button_pressed"]
